# ancre-ai

./: .env.example  .gitignore  CALENDAR_CHAT_INTEGRATION.md  CALENDAR_FINAL_STATUS.md  CALENDAR_IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml  run_worker.py  start-dev.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_auth_billing.py  003_nango_connections.py  004_add_blocks_to_messages.py  005_assistant_integrations.py  006_add_transcription_quota.py  007_hybrid_search.py  008_workspace_documents.py  009_mail_tables.py  010_onboarding_and_web_sources.py  011_extend_nango_for_calendar.py  012_calendar_event_links.py  013_calendar_operation_logs.py
app/: __init__.py  config.py  database.py  deps.py  main.py
app/core/: __init__.py  auth.py  chunking.py  parsing.py  vector_store.py
app/models/: __init__.py  assistant.py  calendar.py  chunk.py  collection.py  daily_usage.py  document.py  document_page.py  document_template.py  mail.py  message.py  subscription.py  tenant.py  usage.py  user.py  web_source.py  workspace_document.py
app/schemas/: __init__.py  assistant.py  calendar.py  chat.py  collection.py  document.py  mail.py  tenant.py  usage.py  workspace_document.py
app/services/: chat.py  embedding.py  pdf_export.py  quota.py  retrieval.py  storage.py  stripe_service.py  transcription.py  usage.py  web_crawler.py  workspace_document.py
app/workers/: __init__.py  settings.py  tasks.py
copilot-runtime/: package-lock.json  package.json
copilot-runtime/src/: index.ts
docs/: API.md
docs/integrations/: copilotkit.md  nango.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
tests/: test_hybrid_retrieval.py  test_integrations.py
(+144 files in other folders)
